fixes whitespace

--- a/workshop/stylesheet.less
+++ b/workshop/stylesheet.less
@@ -112,7 +112,7 @@ body {
 }
 
 .content {
-  padding: @standardPadding;  
+  padding: 0px @standardPadding @standardPadding;  
 
   .large({
     border-left: @desktopSidebarWidth solid black;
